# melly-api

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
src/melly/: __init__.py
src/melly/appmellyapi/: auth.py  db.py  web.py
src/melly/appmellyapi/views/: articles.py  bookmark.py  collection.py  me.py
src/melly/libaccount/: models.py
src/melly/libaccount/domain/: account.py
src/melly/libarticle/: models.py
src/melly/libarticle/domain/: article.py
src/melly/libcollection/: models.py
src/melly/libcollection/domain/: bookmark.py  collection.py
src/melly/libshared/: constants.py  logger.py  models.py  settings.py
tests/: conftest.py  test_articles.py  test_auth.py  test_auth_and_me.py  test_bookmark_item.py  test_collection.py
