[project]
name = "melly"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Batista Harahap", email = "batista@bango29.com" }
]
dependencies = [
    "fastapi>=0.111.0",
    "pydantic>=2.7.4",
    "typer>=0.12.3",
    "fastapi-jwt-auth3>=0.3.0",
    "beanie>=1.26.0",
    "pydantic-settings>=2.3.3",
    "pytz>=2024.1",
    "toml>=0.10.2",
    "ujson>=5.10.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "ruff>=0.4.10",
    "ruff-lsp>=0.0.53",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/melly"]

[tool.ruff]
line-length = 120

[tool.rye.scripts]
docker-build = "bin/docker-build.sh"
